# scopez

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py  setup_cx.py  solverde.txt  targets.txt  test.json
.data/: fqdns.txt  scope.txt  urls.txt
.github/workflows/: publish.yml  ruff.yml
.scripts/: build_macos.sh  change_version.sh
scripts/: build_macos.sh  build_unix.sh  change_version.sh
src/: analysis.py  cidrs.py  fqdns.py  ipv4s.py  main.py  models.py  print.py  targets.py  urls.py  utils.py  validation.py  verbose.py  visualization.py
src/common/click/: cli.py
src/common/targets/: targets.py
