[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
your_package = ["geoip2-ipv4.csv"]

# --- Project Settings ---
[project]
name = "scopez"
version = "v0.0.8"
description = "Scopez verifies connectivity to target servers, reveals CDN presence, and provides detailed target insights like reachability and RDAP."
readme = "README.md"
requires-python = ">3.12.5"
license = { file = "LICENSE" }
authors = [{ name = "Christos Kaltsas", email = "christos@xcalts.co" }]
maintainers = [{ name = "Christos Kaltsas", email = "christos@xcalts.co" }]

# --- Required Dependencies ---
dependencies = [
    # Command-line interface
    "Click",
    # REST HTTP Client
    "requests",
    # Rich text and beautiful formatting in the terminal.
    "rich",
    # Pydantic is the most widely used data validation library for Python.
    "pydantic",
    # Retrieve and parse whois data for IPv4 and IPv6 addresses.
    "ipwhois",
    # Validates fully-qualified domain names against RFC 1123, so that they are acceptable to modern bowsers.
    "fqdn",
    # A fast, powerful, flexible and easy to use open source data analysis and manipulation tool.
    "pandas",
]

# --- URLs ---
[project.urls]
"Homepage" = "https://github.com/xcalts/bugshunter"
"Source" = "https://github.com/xcalts/bugshunter"
"Documentation" = "https://github.com/xcalts/bugshunter"
"Bug Reports" = "https://github.com/xcalts/bugshunter/issues"
"Changelog" = "https://github.com/xcalts/bugshunter/releases"

# --- Scripts ---
[project.scripts]
scopez = "main:cli"

# --- Lint ---
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
section-order = [
    "third-party",
    "standard-library",
    "first-party",
    "local-folder",
]
force-sort-within-sections = true
lines-after-imports = 2
