[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
your_package = ["geoip2-ipv4.csv"]

# --- Project Settings ---
[project]
name = "scopez"
version = "v0.1.0"
description = "Scopez verifies connectivity to target servers, reveals CDN presence, and provides detailed target insights like reachability and RDAP."
readme = "README.md"
requires-python = ">3.11"
license = { file = "LICENSE" }
authors = [{ name = "Christos Kaltsas", email = "christos@xcalts.co" }]
maintainers = [{ name = "Christos Kaltsas", email = "christos@xcalts.co" }]

# --- Required Dependencies ---
dependencies = [
    # Command-line interface
    "Click",
    # REST HTTP Client
    "requests",
    # Rich text and beautiful formatting in the terminal.
    "rich",
    # Pydantic is the most widely used data validation library for Python.
    "pydantic",
    # Retrieve and parse whois data for IPv4 and IPv6 addresses.
    "ipwhois",
    # Validates fully-qualified domain names against RFC 1123, so that they are acceptable to modern bowsers.
    "fqdn",
    # A fast, powerful, flexible and easy to use open source data analysis and manipulation tool.
    "pandas",
    # Package for the creation, manipulation, and study of the structure, dynamics, and functions of complex networks.
    "networkx",
    # A comprehensive library for creating static, animated, and interactive visualizations in Python. 
    "matplotlib",
    # Fundamental algorithms for scientific computing in Python.
    "scipy",
]

# --- URLs ---
[project.urls]
"Homepage" = "https://github.com/xcalts/scopez"
"Source" = "https://github.com/xcalts/scopez"
"Documentation" = "https://github.com/xcalts/scopez"
"Bug Reports" = "https://github.com/xcalts/scopez/issues"
"Changelog" = "https://github.com/xcalts/scopez/releases"

# --- Scripts ---
[project.scripts]
scopez = "main:cli"

# --- Lint ---
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
section-order = [
    "third-party",
    "standard-library",
    "first-party",
    "local-folder",
]
force-sort-within-sections = true
lines-after-imports = 2
